# purchase-analytics

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  project_requirements.md  tech_specs_en.md  tech_specs_ru.md
producer/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
producer/app/: settings.py
producer/app/producer/: apps.py  models.py
producer/app/producer/migrations/: 0001_initial.py
producer/app/producer/tests/: test_models.py
